fix menu to not overlap content on small screens

--- a/client/src/sass/application.scss
+++ b/client/src/sass/application.scss
@@ -370,7 +370,6 @@ table {
 
 @media screen and (max-width: $small-view) {
   .main-col {
-    margin-left: 0;
 
     &, &.expanded {
       .margin-content {
